nodeapp/deployment/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  labels:
    app: sample-cm-app
  name: sample-cm-route
spec:
  to:
    kind: Service
    name: sample-cm-svc
  port:
    targetPort: 8000
  tls:
    termination: passthrough
